# E-commerce-Analytics-Pipeline-2026_Mikal

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  settings.json
reports/: buyer_cleaning_report.txt  generate_reports.py  priority_recommendations.txt
src/: config.py
src/analysis/: analysis.py
src/analysis/reports/excel/: analysis_results.xlsx
src/data/: clean_buyers.py  join.py  products.py  sales.py
src/recommendations/: __init__.py  recommender.py
src/recommendations/templates/: readme.md
src/visualization/: charts.py
src/visualization/reports/excel/: analysis_results.xlsx
