[project]
name = "ecommerce_analysis_2025"
version = "1.0.0"
description = "E-commerce Data Analysis for Capital One Challenge"
authors = [{name = "Mikal Afewerki"}]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100

[tool.pylint]
max-line-length = 100